--- a/src/patternfly/base/tokens/_tokens-palette.scss
+++ b/src/patternfly/base/tokens/_tokens-palette.scss
@@ -1,7 +1,7 @@
-/**
- * Do not edit directly
- * Generated on Tue, 05 Dec 2023 16:11:05 GMT
- */
+// /**
+//  * Do not edit directly
+//  * Generated on Thu, 01 Feb 2024 18:21:44 GMT
+//  */
 
 :root {
   --pf-t--color--red--70: #5f0000;
